# state_of_data

./: docker-compose.yml  pyproject.toml
dbt/state_of_data/: dbt_project.yml
dbt/state_of_data/models/: schema.yml  test.sql
dbt/state_of_data/models/gold/: data_exp_salary.sql  education_salary.sql  gender_race_salary.sql  work_model.sql
dbt/state_of_data/models/silver/: demographics.sql  work.sql
