[tool.poetry]
name = "modern-data-stack"
version = "0.1.0"
description = ""
authors = ["Nicolas Doege <github.repsu@passinbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pre-commit = "^4.2.0"
dbt-core = "^1.10.3"
dbt-postgres = "^1.9.0"
apache-airflow = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
